tests/NormalTests/paczka1/small_fuzzy/83531148.err
Error in line 2: GHAFg7V S170 0,35
Error in line 6: soXMW2C64H S970 81,2
Error in line 7: sAJoaSo S170 11,2
Error in line 16: esit A345 -2,3
